[tool.poetry]
name = "roop"
version = "0.1.0"
description = ""
authors = ["lj1995"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
nvidia-cublas-cu11 = "11.10.3.66"
nvidia-cuda-cupti-cu11 = "11.7.101"
nvidia-cuda-nvrtc-cu11 = "11.7.99"
nvidia-cuda-runtime-cu11 = "11.7.99"
nvidia-cudnn-cu11 = "8.5.0.96"
nvidia-cufft-cu11 = "10.9.0.58"
nvidia-curand-cu11 = "10.2.10.91"
nvidia-cusolver-cu11 = "11.4.0.1"
nvidia-cusparse-cu11 = "11.7.4.91"
nvidia-nccl-cu11 = "2.14.3"
nvidia-nvtx-cu11 = "11.7.91"
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"
insightface = "^0.7.3"
onnxruntime-gpu = "^1.15.0"
psutil = "^5.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
