[tool.poetry]
name = "roop"
version = "0.1.0"
description = ""
authors = ["lj1995"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.9"
nvidia-cudnn-cu11 = "8.6.0.163"
torch = "^2.0.1"
opencv-python = "^4.7.0.72"
insightface = "^0.7.3"
onnxruntime-gpu = "^1.15.0"
psutil = "^5.9.5"
opennsfw2 = "^0.10.2"
nvidia-cuda-cupti-cu11 = ">=11.7.0,<11.8.0"
nvidia-nccl-cu11 = ">=2.0.0,<3.0.0"
tensorflow = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
